--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "autoprefixer": "^10.4.8",
+    "daisyui": "^4.6.0",
     "eslint": "8.17.0",
     "eslint-config-next": "13.2.4",
     "postcss": "^8.4.16",
